alignment issue with waiting text

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -181,7 +181,8 @@ svg {
 }
 
 .waiting {
-    float: none;
+	width: 100%;
+	padding-left: 2.5em;
     /* height: 100px; */
     /* margin-bottom: 60px; */
     /* margin-top: 60px; */
